Major commit. This commit is the code base used in the RC-20 deploy made 2011-08-23. This release contains capabilities fro Bukaorta, Elvis WS, Mammografi,NU & SU, and Gyn, Elvis WS. Changes to CSS files have also been made to adapt to IE 9 limitations. Error message page to display for user have been included in the flows in case the client looses connection with WS. A Mail sending feature has been added to alert Insieme if WS returns errors when its methods are invoked by any user.